--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
             <h4>Silly String</h4>
             <button class="button" onClick="launch()">Launch</button>
         </div>
+        <div class="box">
+            <h4>Distance</h4>
+            <h3 class="" id='distance'>0.00</h3>
+        </div>
+        <div class="box">
+            <h4>Temp</h4>
+            <h3 class="" id='temp'>0.00</h3>
+        </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/index.js" type="text/javascript"></script>
